on_k8s/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: webook
  name: webook-mysql-service
spec:
  selector:
    app: webook-mysql
  ports:
    - protocol: TCP
      #
      port: 3308
      targetPort: 3306
      nodePort: 30002
  type: NodePort
