on_k8s/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: webook
  name: webook-redis-service
spec:
  selector:
    app: webook-redis
  ports:
    - protocol: TCP
      #
      port: 6380
      targetPort: 6379
      nodePort: 30003
  type: NodePort
