on_k8s/webook-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: webook
  name: webook-pod-service
spec:
  selector:
    app: webook-pod
  ports:
    - protocol: TCP
      #
      port: 8081
      targetPort: 8090
      #nodePort: 30004
