on_k8s/webook-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: webook
  name: webook-live-ingress
spec:
#  老子要用 nginx
  ingressClassName: nginx
  rules:
    - host: ljy.ingress.com
      http:
        paths:
#          - 请求路径的前缀是 / 的时候
#          - 将流量转发过去后面的 webook-live 服务上
#          - 端口是 81
          - backend:
              service:
                name: webook-pod-service
                port:
                  number: 8081
            pathType: Prefix
            path: /
